[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ui/UI.gd" type="Script" id=1]
[ext_resource path="res://resources/Ui/GuiHealth/ui_health_under.png" type="Texture" id=2]
[ext_resource path="res://resources/Ui/GuiHealth/ui_health_over.png" type="Texture" id=3]
[ext_resource path="res://resources/Ui/GuiHealth/ui_health_progress.png" type="Texture" id=4]
[ext_resource path="res://resources/Ui/GuiHealth/ui_health_icon.png" type="Texture" id=5]

[node name="UI" type="Node2D"]
z_index = 1001
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -9.08826, 0 )
current = true
process_mode = 0
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="UICanvas" type="CanvasLayer" parent="."]
layer = 9

[node name="TopGUI" type="MarginContainer" parent="UICanvas"]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 10.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Layout" type="HBoxContainer" parent="UICanvas/TopGUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 708.0
margin_bottom = 86.0

[node name="Hp" type="Control" parent="UICanvas/TopGUI/Layout"]
margin_right = 486.0
margin_bottom = 76.0
rect_min_size = Vector2( 486, 76 )
rect_pivot_offset = Vector2( 4401.09, 99.394 )

[node name="Layout" type="HBoxContainer" parent="UICanvas/TopGUI/Layout/Hp"]
margin_right = 1096.0
margin_bottom = 160.0
rect_min_size = Vector2( 100, 50 )
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 0
size_flags_horizontal = 10
size_flags_vertical = 10
size_flags_stretch_ratio = 74.73
custom_constants/separation = 0

[node name="Bar" type="TextureProgress" parent="UICanvas/TopGUI/Layout/Hp/Layout"]
margin_right = 960.0
margin_bottom = 160.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 11.22
value = 3.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="Image" type="TextureRect" parent="UICanvas/TopGUI/Layout/Hp/Layout"]
margin_left = 968.0
margin_right = 1096.0
margin_bottom = 160.0
texture = ExtResource( 5 )
stretch_mode = 5

[node name="AmmoPanel" type="HBoxContainer" parent="UICanvas/TopGUI/Layout"]
margin_left = 490.0
margin_right = 698.0
margin_bottom = 76.0

[node name="GunIcon" type="TextureRect" parent="UICanvas/TopGUI/Layout/AmmoPanel"]
margin_right = 50.0
margin_bottom = 76.0
rect_min_size = Vector2( 50, 50 )

[node name="AmmoCounter" type="NinePatchRect" parent="UICanvas/TopGUI/Layout/AmmoPanel"]
margin_left = 54.0
margin_right = 204.0
margin_bottom = 76.0
rect_min_size = Vector2( 150, 50 )

[node name="AmmoLabel" type="Label" parent="UICanvas/TopGUI/Layout/AmmoPanel/AmmoCounter"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_right = 6.0
text = "123123123"

[node name="Speed" type="Label" parent="UICanvas/TopGUI/Layout/AmmoPanel"]
margin_left = 208.0
margin_top = 31.0
margin_right = 208.0
margin_bottom = 45.0
